# Lucas-IM-Backend

./: .env  Cargo.toml  readme.md
apps/common/: Cargo.toml
apps/common/src/: lib.rs
apps/common/src/config/: mod.rs
apps/common/src/service_discovery/: mod.rs
apps/common/src/service_discovery/etcd/: mod.rs
apps/common/src/service_register/: mod.rs
apps/common/src/service_register/etcd/: mod.rs
apps/msg-gateway/: Cargo.toml
apps/msg-gateway/etc/: msg-gateway.yml
apps/msg-gateway/src/: lib.rs
apps/msg-gateway/src/config/: mod.rs
apps/user/api/: Cargo.toml
apps/user/api/etc/: user.yml
apps/user/api/src/: app_state.rs  lib.rs  main.rs
apps/user/api/src/config/: mod.rs
apps/user/rpc/: Cargo.toml  build.rs
apps/user/rpc/etc/: user.yml
apps/user/rpc/protos/: user.proto
apps/user/rpc/src/: lib.rs  main.rs  service_context.rs
apps/user/rpc/src/config/: mod.rs
apps/user/rpc/src/error/: mod.rs  tonic.rs
apps/user/rpc/src/logic/: find_user_logic.rs  get_user_info_logic.rs  get_user_online_count_logic.rs  login_logic.rs  mod.rs  ping_logic.rs  register_logic.rs  send_register_code_logic.rs
apps/user/rpc/src/pb/: user.rs
apps/user/rpc/src/repo/: mod.rs
apps/user/rpc/src/repo/postgres/: user.rs
apps/user/rpc/src/repo/redis/: mod.rs
apps/user/rpc/src/server/: mod.rs
apps/user/rpc/src/utils/: jwt.rs  mod.rs
migrations/: 20250326084604_users.up.sql
