[workspace]
members = [ "apps/common",
    "apps/user/rpc",
    "apps/user/api"
, "apps/msg-gateway"]
resolver = "2"

[workspace.dependencies]
tonic-build = "0.13.0"
prost = "0.13.5"
prost-types = "0.13.5"
serde = "1.0.219"
serde_yaml = "0.9.34"
tonic = "0.13.0"
tower = "0.4.13"
async-trait = "0.1.88"
argon2 = "0.5.3"
rand = "0.8.5"
jsonwebtoken = "9.3.1"
redis = { version = "0.29.2", features = ["tokio-comp"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
chrono = "0.4.40"
nanoid = "0.4.0"
sqlx = { version = "0.8.3"}
tokio = { version = "1.44.1" }
etcd-client = "0.14.1"
anyhow = "1.0.97"
dashmap = "6.1.0"
