[package]
name = "user-api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
axum.workspace = true
common = { version = "0.1.0", path = "../../common" }
etcd-client.workspace = true
serde = { workspace = true, features = ["derive"] }
tokio.workspace = true
tonic.workspace = true
tower.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
user-rpc = { version = "0.1.0", path = "../rpc" }
