[package]
name = "user-rpc"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
async-trait = "0.1.88"
common = { version = "0.1.0", path = "../../common" }
etcd-client = "0.14.1"
prost.workspace = true
prost-types.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_yaml.workspace = true
sqlx = { version = "0.8.3", features = ["runtime-tokio-rustls", "postgres"] }
tokio = { version = "1.44.1", features = ["full"] }
tonic = { workspace = true, features = ["gzip"] }
tower.workspace = true
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
chrono = "0.4.40"
nanoid = "0.4.0"
redis = { version = "0.29.2", features = ["tokio-comp"] }
argon2 = "0.5.3"
rand = "0.8.5"
jsonwebtoken = "9.3.1"


[build-dependencies]
tonic-build.workspace = true
