[package]
name = "user-rpc"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
common = { version = "0.1.0", path = "../../common" }
etcd-client.workspace = true
prost.workspace = true
prost-types.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_yaml.workspace = true
sqlx = { workspace = true, features = ["runtime-tokio-rustls", "postgres"] }
tokio = { workspace = true, features = ["full"] }
tonic = { workspace = true, features = ["gzip"] }
tower.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
nanoid.workspace = true
redis = { workspace = true, features = ["tokio-comp"] }
argon2.workspace = true
rand .workspace = true
jsonwebtoken .workspace = true
serde_json = "1.0.140"


[build-dependencies]
tonic-build.workspace = true
